--- a/flutter_default_state_manager/pubspec.yaml
+++ b/flutter_default_state_manager/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  syncfusion_flutter_gauges: ^19.2.46
+  syncfusion_flutter_gauges:  ^28.2.6
   currency_text_input_formatter: ^2.0.1
+  intl: ^0.20.1
 
 
   # The following adds the Cupertino Icons font to your application.
